(rule
 (action
  (progn
   (copy ../../src/bst.ml bst.ml)
   (copy ../../src/size.ml size.ml)))
 (package saturn))

 (test
 (package saturn)
 (name bst_dscheck)
 (modules bst size bst_dscheck)
 (build_if
  (>= %{ocaml_version} 5))
 (libraries alcotest dscheck multicore-magic-dscheck)
 (flags
  (:standard -open Multicore_magic_dscheck)))

 (test
 (package saturn)
 (name stm_bst)
 (modules stm_bst)
 (libraries saturn qcheck-core qcheck-stm.stm stm_run))