(rule
 (action
  (progn
   (copy ../../src/bst.ml bst.ml)
   (copy ../../src/bst_ez.ml bst_ez.ml)
   (copy ../../src/size.ml size.ml)))
 (package saturn))

 (test
 (package saturn)
 (name bst_dscheck)
 (modules bst bst_ez size bst_dscheck)
 (build_if
  (>= %{ocaml_version} 5))
 (libraries alcotest dscheck multicore-magic-dscheck)
 (flags
  (:standard -open Multicore_magic_dscheck)))

 ; (test
 ; (package saturn)
 ; (name stm_bst)
 ; (modules stm_bst)
 ; (libraries saturn qcheck-core qcheck-stm.stm stm_run))

 ; (test
 ; (package saturn)
 ; (name qcheck_bst)
 ; (modules qcheck_bst)
 ; (libraries
 ;  saturn
 ;  barrier
 ;  qcheck
 ;  qcheck-core
 ;  qcheck-alcotest
 ;  alcotest
 ;  domain_shims))

 (test
 (package saturn)
 (name experiment)
 (modules experiment)
  (libraries
  saturn
  barrier
  qcheck
  qcheck-core
  qcheck-alcotest
  alcotest
  domain_shims))